# OS-PROJECT

./: Makefile  README.md  package-lock.json  stock_trading
backend/: CMakeLists.txt
backend/include/: account.h  order.h  order_queue.h  stock.h  trading.h
backend/src/: account.c  main.c  order_queue.c  stock.c  trading.c
src/: account.c  account.h  main.c  order.h  order_queue.c  order_queue.h  stock.c  stock.h  trading.c  trading.h  ui.c  ui.h
trading-ui/: package-lock.json  package.json  vite.config.js
trading-ui/src/: App.jsx  index.css
trading-ui/src-tauri/: Cargo.toml  tauri.conf.json
trading-ui/src-tauri/src/: main.rs
